--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/">
-  <!-- <base href="https://nenphan.github.io/demoweb/"> -->
+  <!-- <base href="/"> -->
+  <base href="https://nenphan.github.io/demoweb/">
 
 
   <meta charset="UTF-8">
@@ -36,7 +36,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '3428631085';
+    var serviceWorkerVersion = '2984155417';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
